--- a/templates/default.html
+++ b/templates/default.html
@@ -14,6 +14,7 @@
             </div>
             <div id="navigation">
                 <a href="/">Home</a>
+                <a href="/contact.html">Who</a>
                 <a href="/cfp.html">Call for Papers</a>
             </div>
         </div>
