--- a/templates/default.html
+++ b/templates/default.html
@@ -15,7 +15,7 @@
             <div id="navigation">
                 <a href="/">Home</a>
                 <a href="/contact.html">Who</a>
-                <a href="/cfp.html">Call for Papers</a>
+                <a href="/cfp.html">CFP</a>
             </div>
         </div>
 
